syntax_check.txt
Traceback (most recent call last):
  File "C:\Program Files\Python313\Lib\py_compile.py", line 144, in compile
    code = loader.source_to_code(source_bytes, dfile or file,
                                 _optimize=optimize)
  File "<frozen importlib._bootstrap_external>", line 1087, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "ready_jobs_watcher/main.py", line 203
    logging.info("Shutdown complete.")
SyntaxError: expected 'except' or 'finally' block

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<string>", line 1, in <module>
    import py_compile; py_compile.compile('ready_jobs_watcher/main.py', doraise=True)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Program Files\Python313\Lib\py_compile.py", line 150, in compile
    raise py_exc
py_compile.PyCompileError:   File "ready_jobs_watcher/main.py", line 203
    logging.info("Shutdown complete.")
SyntaxError: expected 'except' or 'finally' block

